--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
                     <option value="even">Nearest, Ties to Even</option>
                 </select>
             </div>
-            <button class="submitButton" type="submit">Convert</button>
+            <div class="convertNexport">
+                <button class="submitButton" type="button">Convert</button>
+                <button class="submitButton" type="button" disabled>Export</button>
+            </div>
         </div>
         <div class="outputDecimal">
             <div class="prepContainer">
